# python-practice

./: .flake8  .pre-commit-config.yaml  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: coverage.yml  release.yml  tests.yml
docs/: conf.py  index.rst
docs/_build/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree  reference.doctree
src/hypermodern_python/: console.py  wikipedia.py
tests/: conftest.py  test_console.py  test_wikipedia.py
