[tool.poetry]
name = "python-practice"
version = "0.1.0"
description = "Python practice using hypermodern Python blog"
license = "MIT"
homepage = "https://github.com/tmnhat2001/python-practice"
repository = "https://github.com/tmnhat2001/python-practice"
keywords = ["hypermodern"]
authors = ["James Tran <tmnhat2001@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

