[tool.poetry]
name = "hypermodern-python"
version = "0.1.0"
description = "Python practice using hypermodern Python blog"
license = "MIT"
homepage = "https://github.com/tmnhat2001/python-practice"
repository = "https://github.com/tmnhat2001/python-practice"
keywords = ["hypermodern"]
authors = ["James Tran <tmnhat2001@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hypermodern-python = "hypermodern_python.console:main"

