[tool.poetry]
name = "hypermodern-python"
version = "0.1.0"
description = "Python practice using hypermodern Python blog"
license = "MIT"
homepage = "https://github.com/tmnhat2001/python-practice"
repository = "https://github.com/tmnhat2001/python-practice"
keywords = ["hypermodern"]
authors = ["James Tran <tmnhat2001@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
requests = "^2.25.1"
pydantic = "^1.8.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-mock = "^3.5.1"
black = "^20.8b1"
flake8 = "^3.9.0"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^21.3.2"
flake8-import-order = "^0.18.1"
safety = "^1.10.3"
coverage = {extras = ["toml"], version = "^5.5"}
reorder-python-imports = "^2.4.0"
mypy = "^0.812"
pytype = {version = "^2021.3.22", python = "3.8"}
typeguard = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hypermodern-python = "hypermodern_python.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hypermodern_python"]

[tool.coverage.report]
show_missing = true
